# libfilewatcher

./: Cargo.toml  Jenkinsfile  README.md
libfilewatcher/: Cargo.toml
libfilewatcher-builder/: Cargo.toml
libfilewatcher-builder/src/: lib.rs  main.rs
libfilewatcher/src/: lib.rs
shared-library-builder/builder/: Cargo.toml
shared-library-builder/builder/src/: main.rs
