[package]
name = "libfilewatcher"
version = "0.0.1"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"

[dependencies]
notify = "8.0.0"
value-box = { version = "2.3", features = [ "phlow" ] }
string-box = "1.1"
value-box-ffi = { version = "1.1", features = [ "string-box", "phlow"] }
env_logger = "0.10"
phlow = { version = "1.3", features = [ "phlow-derive" ] }
phlow-extensions = "1.3"
phlow-ffi = { version = "1.1" }

[lib]
name = "Filewatcher"
crate-type = ["cdylib"]
